kube/hw2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiny-app-svc
spec:
  type: ClusterIP
  selector:
    app: tiny-app
#    app.kubernetes.io/name: tiny-app
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 8000
